--- a/install
+++ b/install
@@ -1,5 +1,7 @@
 # Do this only once
 if [ ! -f ~/.ubuntu_setup ]; then
+	echo "*** ONE TIME installation ***"
+
 	# add user to virtualbox
 	sudo adduser $(whoami) vboxsf
 
@@ -18,20 +20,26 @@ fi
 
 # setup ssh
 if [ ! -f ~/.ssh/id_rsa.pub ]; then
+	echo "*** Setup ssh ***"
+
     ssh-keygen -t rsa -b 4096 -C "info@willembressers.nl"
 	cat ~/.ssh/id_rsa.pub
 fi
 
-# install sublime
-function install_git {
+read -p "Install sublime (y/n)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	echo "*** Installing sublime ***"
+
 	wget -qO - https://download.sublimetext.com/sublimehq-pub.gpg | sudo apt-key add -
 	echo "deb https://download.sublimetext.com/ apt/stable/" | sudo tee /etc/apt/sources.list.d/sublime-text.list
 	sudo apt update -y
 	sudo apt install sublime-text
-}
+fi 
 
-# install git
-function install_git {
+read -p "Install git (y/n)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	echo "*** Installing git ***"
+
 	sudo apt install git -y
 	git config --global user.email "info@willembressers.nl"
 	git config --global user.name "Willem Bressers"
@@ -39,19 +47,23 @@ function install_git {
 	git config --global push.default simple
 	git config --global core.excludesfile ~/.gitignore
 	touch ~/.gitignore
-}
+fi
 
-# install cuda
-function install_cuda {
+read -p "Install cuda (y/n)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	echo "*** Installing cuda ***"
+
 	cd ~/Desktop/Projects
 	wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda-repo-ubuntu1604-8-0-local-ga2_8.0.61-1_amd64-deb
 	sudo dpkg -i cuda-repo-ubuntu1604-8-0-local-ga2_8.0.61-1_amd64-deb
 	sudo apt-get update
 	sudo apt-get install cuda
-}
+fi
 
-# install opencv
-function install_opencv {
+read -p "Install opencv (y/n)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	echo "*** Installing opencv ***"
+
 	# OS dependencies
 	sudo apt-get install -y build-essential cmake git libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev python-dev python-numpy libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libjasper-dev libdc1394-22-dev
 
@@ -63,10 +75,12 @@ function install_opencv {
 	cd build
 	cmake -D CMAKE_BUILD_TYPE=Release -D CMAKE_INSTALL_PREFIX=/usr/local ..
 	make -j4
-}
+fi
 
-# install darknet
-function install_darknet {
+read -p "Install darknet (y/n)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	echo "*** Installing darknet ***"
+
 	cd ~/Desktop/Projects
 	git clone https://github.com/pjreddie/darknet.git
 	cd darknet
@@ -74,10 +88,12 @@ function install_darknet {
 	mkdir -p obj
 	wget https://pjreddie.com/media/files/yolo.weights
 	wget https://pjreddie.com/media/files/tiny-yolo-voc.weights
-}
+fi
 
-# instal docker
-function install_docker {
+read -p "Install docker (y/n)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	echo "*** Installing docker ***"
+
 	# install curl
 	sudo apt-get install curl
 
@@ -96,16 +112,20 @@ function install_docker {
 	# add your username to the docker group
 	sudo usermod -aG docker ${USER}
 	su - ${USER}
-}
+fi
 
-# install pip3
-function install_pip {
+read -p "Install pip (y/n)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	echo "*** Installing pip ***"
+
 	sudo apt-get -y install python3-pip
 	pip3 install --upgrade pip
-}
+fi
 
-# install virtualenvwrapper
-function install_virtualenvwrapper {
+read -p "Install virtualenvwrapper (y/n)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	echo "*** Installing virtualenvwrapper ***"
+
 	pip3 install virtualenvwrapper
 	echo export VIRTUALENVWRAPPER_PYTHON=/usr/bin/python3 >> ~/.bashrc
 	echo export WORKON_HOME=$HOME/.virtualenvs >> ~/.bashrc
@@ -113,4 +133,4 @@ function install_virtualenvwrapper {
 	echo source $HOME/.local/bin/virtualenvwrapper.sh >> ~/.bashrc
 	source ~/.bashrc
 	mkdir $PROJECT_HOME
-}
+fi
