--- a/install
+++ b/install
@@ -1,49 +1,78 @@
+if [ ! -f ~/.bash_aliases ]; then
+    touch ~/.bash_aliases
+fi
+
+if [ ! -f ~/.pam_environment ]; then
+    touch ~/.pam_environment
+fi
+
+function logout {
+	clear
+	echo "*** LOGOUT for the changes have effect ***"
+	read -p "logout (y/n)? " answer; answer=${answer:-"n"}
+	if [ "${answer}" == "y" ] ; then
+		gnome-session-quit
+	fi
+}
+
 # Do this only once
-if [ ! -f ~/.ubuntu_setup ]; then
+if [ "$UBUNTU_SETUP_INIT" == "true" ]; then
 	echo "*** ONE TIME installation ***"
 
 	# add user to virtualbox
 	sudo adduser $(whoami) vboxsf
 
 	# update ubuntu
-	sudo apt update -y
-	sudo apt upgrade -y
+	sudo apt-get update -y
+	sudo apt-get upgrade -y
 
-	# install java
-	sudo apt install default-jre
+	# ask some general questions
+	read -p "Email: (info@willembressers.nl)? " email; email=${email:-"info@willembressers.nl"}
+	read -p "Name: (Willem Bressers)? " name; name=${name:-"Willem Bressers"}
+	read -p "Project home: (~/Desktop/Projects)? " project_home; project_home=${project_home:-~/Desktop/Projects}
 
-	# install vim
-	sudo apt install vim -y
+	# set the environment variables
+	echo "UBUNTU_SETUP_INIT=\"true\"" >> ~/.pam_environment
+	echo "UBUNTU_SETUP_EMAIL=\"$email\"" >> ~/.pam_environment
+	echo "UBUNTU_SETUP_NAME=\"$name\"" >> ~/.pam_environment
+	echo "UBUNTU_SETUP_PROJECT_HOME=\"$project_home\"" >> ~/.pam_environment
 
-	touch ~/.ubuntu_setup
+	mkdir -p $project_home
+	echo "alias cdp='cd $project_home'" >> ~/.bash_aliases
+	echo "alias logout-gnome=\"gnome-session-quit --force\"" >> ~/.bash_aliases
+
+	logout
 fi
 
-# setup ssh
 if [ ! -f ~/.ssh/id_rsa.pub ]; then
 	echo "*** Setup ssh ***"
 
-    ssh-keygen -t rsa -b 4096 -C "info@willembressers.nl"
+    ssh-keygen -t rsa -b 4096 -C $UBUNTU_SETUP_EMAIL
 	cat ~/.ssh/id_rsa.pub
+fi
+
+read -p "Install vim (y/n)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	sudo apt-get install -y vim
+	echo "EDITOR=$(which vim)" >> ~/.profile
 fi
 
 read -p "Install sublime (y/n)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	echo "*** Installing sublime ***"
-
 	wget -qO - https://download.sublimetext.com/sublimehq-pub.gpg | sudo apt-key add -
 	echo "deb https://download.sublimetext.com/ apt/stable/" | sudo tee /etc/apt/sources.list.d/sublime-text.list
-	sudo apt update -y
-	sudo apt install sublime-text
+	sudo apt-get update -y
+	sudo apt-get install -y sublime-text
+	echo "EDITOR=$(which subl)" >> ~/.profile
 fi 
 
 read -p "Install git (y/n)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	echo "*** Installing git ***"
-
-	sudo apt install git -y
-	git config --global user.email "info@willembressers.nl"
-	git config --global user.name "Willem Bressers"
-	git config --global core.editor "vim"
+	sudo apt-get install -y git
+	git config --global user.email $UBUNTU_SETUP_EMAIL
+	git config --global user.name $UBUNTU_SETUP_NAME
 	git config --global push.default simple
 	git config --global core.excludesfile ~/.gitignore
 	touch ~/.gitignore
@@ -53,11 +82,11 @@ read -p "Install cuda (y/n)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	echo "*** Installing cuda ***"
 
-	cd ~/Desktop/Projects
+	cd $UBUNTU_SETUP_PROJECT_HOME
 	wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda-repo-ubuntu1604-8-0-local-ga2_8.0.61-1_amd64-deb
 	sudo dpkg -i cuda-repo-ubuntu1604-8-0-local-ga2_8.0.61-1_amd64-deb
 	sudo apt-get update
-	sudo apt-get install cuda
+	sudo apt-get install -y cuda
 fi
 
 read -p "Install opencv (y/n)? " answer; answer=${answer:-"n"}
@@ -67,7 +96,7 @@ if [ "${answer}" == "y" ] ; then
 	# OS dependencies
 	sudo apt-get install -y build-essential cmake git libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev python-dev python-numpy libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libjasper-dev libdc1394-22-dev
 
-	cd ~/Desktop/Projects
+	cd $UBUNTU_SETUP_PROJECT_HOME
 	wget https://github.com/opencv/opencv/archive/3.3.0.zip
 	unzip 3.3.0.zip
 	cd opencv-3.3.0/
@@ -81,7 +110,7 @@ read -p "Install darknet (y/n)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	echo "*** Installing darknet ***"
 
-	cd ~/Desktop/Projects
+	cd $UBUNTU_SETUP_PROJECT_HOME
 	git clone https://github.com/pjreddie/darknet.git
 	cd darknet
 	make
@@ -95,7 +124,7 @@ if [ "${answer}" == "y" ] ; then
 	echo "*** Installing docker ***"
 
 	# install curl
-	sudo apt-get install curl
+	sudo apt-get install -y curl
 
 	# add the GPG key
 	curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
@@ -127,10 +156,11 @@ if [ "${answer}" == "y" ] ; then
 	echo "*** Installing virtualenvwrapper ***"
 
 	pip3 install virtualenvwrapper
-	echo export VIRTUALENVWRAPPER_PYTHON=/usr/bin/python3 >> ~/.bashrc
-	echo export WORKON_HOME=$HOME/.virtualenvs >> ~/.bashrc
-	echo export PROJECT_HOME=$HOME/Devel >> ~/.bashrc
-	echo source $HOME/.local/bin/virtualenvwrapper.sh >> ~/.bashrc
-	source ~/.bashrc
-	mkdir $PROJECT_HOME
+
+	# set the environment variables
+	echo "VIRTUALENVWRAPPER_PYTHON=\"/usr/bin/python3\"" >> ~/.profile
+	echo "WORKON_HOME=\"$HOME/.virtualenvs\"" >> ~/.profile
+	echo "PROJECT_HOME=\"$UBUNTU_SETUP_PROJECT_HOME\"" >> ~/.profile
+	echo source $HOME/.local/bin/virtualenvwrapper.sh >> ~/.profile
+	source ~/.profile
 fi
