--- a/install
+++ b/install
@@ -11,7 +11,7 @@ fi
 function logout {
 	clear
 	echo "*** LOGOUT for the changes have effect ***"
-	read -p "logout (y/n)? " answer; answer=${answer:-"n"}
+	read -p "logout (y/N)? " answer; answer=${answer:-"n"}
 	if [ "${answer}" == "y" ] ; then
 		gnome-session-quit
 	fi
@@ -56,13 +56,13 @@ if [ ! -f ~/.ssh/id_rsa.pub ]; then
 	cat ~/.ssh/id_rsa.pub
 fi
 
-read -p "Install vim (y/n)? " answer; answer=${answer:-"n"}
+read -p "Install vim (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	sudo apt-get install -y vim
 	echo "EDITOR=$(which vim)" >> ~/.profile
 fi
 
-read -p "Install sublime (y/n)? " answer; answer=${answer:-"n"}
+read -p "Install sublime (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	echo "*** Installing sublime ***"
 	wget -qO - https://download.sublimetext.com/sublimehq-pub.gpg | sudo apt-key add -
@@ -72,7 +72,7 @@ if [ "${answer}" == "y" ] ; then
 	echo "EDITOR=$(which subl)" >> ~/.profile
 fi 
 
-read -p "Install git (y/n)? " answer; answer=${answer:-"n"}
+read -p "Install git (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	echo "*** Installing git ***"
 	sudo apt-get install -y git
@@ -83,7 +83,7 @@ if [ "${answer}" == "y" ] ; then
 	touch ~/.gitignore
 fi
 
-read -p "Install cuda (y/n)? " answer; answer=${answer:-"n"}
+read -p "Install cuda (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	echo "*** Installing cuda ***"
 
@@ -94,7 +94,7 @@ if [ "${answer}" == "y" ] ; then
 	sudo apt-get install -y cuda
 fi
 
-read -p "Install opencv (y/n)? " answer; answer=${answer:-"n"}
+read -p "Install opencv (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	echo "*** Installing opencv ***"
 
@@ -111,7 +111,7 @@ if [ "${answer}" == "y" ] ; then
 	make -j4
 fi
 
-read -p "Install darknet (y/n)? " answer; answer=${answer:-"n"}
+read -p "Install darknet (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	echo "*** Installing darknet ***"
 
@@ -124,31 +124,18 @@ if [ "${answer}" == "y" ] ; then
 	wget https://pjreddie.com/media/files/tiny-yolo-voc.weights
 fi
 
-read -p "Install docker (y/n)? " answer; answer=${answer:-"n"}
+read -p "Install Docker (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
-	echo "*** Installing docker ***"
-
-	# install curl
 	sudo apt-get install -y curl
-
-	# add the GPG key
 	curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-
-	# Add the Docker repository to APT sources
 	sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-
-	# update the package database
 	sudo apt-get update
-
-	# install Docker
 	sudo apt-get install -y docker-ce
-
-	# add your username to the docker group
 	sudo usermod -aG docker ${USER}
 	su - ${USER}
 fi
 
-read -p "Install pip (y/n)? " answer; answer=${answer:-"n"}
+read -p "Install pip (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	echo "*** Installing pip ***"
 
@@ -156,7 +143,7 @@ if [ "${answer}" == "y" ] ; then
 	pip3 install --upgrade pip
 fi
 
-read -p "Install virtualenvwrapper (y/n)? " answer; answer=${answer:-"n"}
+read -p "Install virtualenvwrapper (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	echo "*** Installing virtualenvwrapper ***"
 
@@ -169,3 +156,48 @@ if [ "${answer}" == "y" ] ; then
 	echo source $HOME/.local/bin/virtualenvwrapper.sh >> ~/.profile
 	source ~/.profile
 fi
+
+read -p "Install RStudio Server (y/N)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	echo "*** Installing RStudio server ***"
+
+	# install R
+	sudo apt-get install -y r-base
+
+	# install RStudio Server
+	sudo apt-get install -y gdebi-core
+	wget https://download2.rstudio.org/rstudio-server-1.0.153-amd64.deb
+	sudo gdebi rstudio-server-1.0.153-amd64.deb
+
+	echo "*** see: http://127.0.0.1:8787 ***"
+fi
+
+read -p "Install Bluemix CLI (y/N)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	echo "*** Installing Bluemix CLI ***"
+	wget http://public.dhe.ibm.com/cloud/bluemix/cli/bluemix-cli/Bluemix_CLI_0.5.6_amd64.tar.gz
+	tar -xvf Bluemix_CLI_0.5.6_amd64.tar.gz
+	rm Bluemix_CLI_0.5.6_amd64.tar.gz
+	cd Bluemix_CLI
+	sudo ./install_bluemix_cli
+	rm -rf Bluemix_CLI
+fi
+
+read -p "Install Cloud Foundry (y/N)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | sudo apt-key add -
+	echo "deb http://packages.cloudfoundry.org/debian stable main" | sudo tee /etc/apt/sources.list.d/cloudfoundry-cli.list
+	sudo apt-get update
+	sudo apt-get install cf-cli
+fi 
+
+read -p "Install Kubernetes CLI (y/N)? " answer; answer=${answer:-"n"}
+if [ "${answer}" == "y" ] ; then
+	curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+	chmod +x ./kubectl
+	sudo mv ./kubectl /usr/local/bin/kubectl
+	kubectl cluster-info
+	echo "source <(kubectl completion bash)" >> ~/.bashrc
+fi
+
+
