--- a/install
+++ b/install
@@ -4,6 +4,14 @@ if [ ! -f ~/.bash_aliases ]; then
     touch ~/.bash_aliases
 fi
 
+if [ ! -f ~/.bash_profile ]; then
+    touch ~/.bash_profile
+fi
+
+if [ ! -f ~/.gitignore ]; then
+    touch ~/.gitignore
+fi
+
 if [ ! -f ~/.pam_environment ]; then
     touch ~/.pam_environment
 fi
@@ -59,17 +67,18 @@ fi
 read -p "Install vim (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
 	sudo apt-get install -y vim
-	echo "EDITOR=$(which vim)" >> ~/.profile
+	echo "EDITOR=$(which vim)" >> ~/.pam_environment
 fi
 
 read -p "Install sublime (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
-	echo "*** Installing sublime ***"
 	wget -qO - https://download.sublimetext.com/sublimehq-pub.gpg | sudo apt-key add -
 	echo "deb https://download.sublimetext.com/ apt/stable/" | sudo tee /etc/apt/sources.list.d/sublime-text.list
 	sudo apt-get update -y
 	sudo apt-get install -y sublime-text
-	echo "EDITOR=$(which subl)" >> ~/.profile
+	echo "EDITOR=$(which subl)" >> ~/.pam_environment
+	echo "*.sublime-project" >> ~/.gitignore
+	echo "*.sublime-workspace" >> ~/.gitignore
 fi 
 
 read -p "Install git (y/N)? " answer; answer=${answer:-"n"}
@@ -80,7 +89,6 @@ if [ "${answer}" == "y" ] ; then
 	git config --global user.name $UBUNTU_SETUP_NAME
 	git config --global push.default simple
 	git config --global core.excludesfile ~/.gitignore
-	touch ~/.gitignore
 fi
 
 read -p "Install cuda (y/N)? " answer; answer=${answer:-"n"}
@@ -137,24 +145,21 @@ fi
 
 read -p "Install pip (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
-	echo "*** Installing pip ***"
-
-	sudo apt-get -y install python3-pip
-	pip3 install --upgrade pip
+	wget https://bootstrap.pypa.io/get-pip.py
+	python get-pip.py --user
+	rm get-pip.py
 fi
 
 read -p "Install virtualenvwrapper (y/N)? " answer; answer=${answer:-"n"}
 if [ "${answer}" == "y" ] ; then
-	echo "*** Installing virtualenvwrapper ***"
-
-	pip3 install virtualenvwrapper
+	pip install --user virtualenvwrapper
 
 	# set the environment variables
-	echo "VIRTUALENVWRAPPER_PYTHON=\"/usr/bin/python3\"" >> ~/.profile
-	echo "WORKON_HOME=\"$HOME/.virtualenvs\"" >> ~/.profile
-	echo "PROJECT_HOME=\"$UBUNTU_SETUP_PROJECT_HOME\"" >> ~/.profile
-	echo source $HOME/.local/bin/virtualenvwrapper.sh >> ~/.profile
-	source ~/.profile
+	echo "WORKON_HOME=\"$HOME/.virtualenvs\"" >> ~/.pam_environment
+	echo "PROJECT_HOME=$UBUNTU_SETUP_PROJECT_HOME"  >> ~/.pam_environment
+	#echo "VIRTUALENVWRAPPER_PYTHON=\"/usr/bin/python3\"" >> ~/.bash_profile
+	echo source $HOME/.local/bin/virtualenvwrapper.sh >> ~/.bashrc
+	source ~/.bashrc
 fi
 
 read -p "Install RStudio Server (y/N)? " answer; answer=${answer:-"n"}
